# adhv8_kraken

./: .gitignore
src/: CMakeCache_Corey.txt  CMakeLists.txt  CTestConfig.cmake  Doxyfile  MERGE_NOTES.txt  kraken_new_features.txt
src/OLD/: elem_sw3_get_pressure.c
src/columns/: CMakeLists.txt  column_adpt_merge_elem.c  column_adpt_ref.c  column_adpt_set_flags.c  column_adpt_unref.c  column_elem2d_merge.c  column_elem2d_split.c  column_elem3d_merge.c  column_elem3d_split.c  tl_columns.c
src/comm/: CMakeLists.txt  comm_adj_nodes.c  comm_check.c  comm_check_int.c  comm_check_surface.c  comm_edge_setup.c  comm_elem_levels.c  comm_flag_edges.c  comm_new_node_nums.c  comm_new_surf_node_nums.c  comm_node_data.c  comm_set_keys.c  comm_set_keys_supermodel.c  comm_set_keys_supermodel_wvel.c  comm_update_GN.c  comm_update_GN1.c  comm_update_GN2.c  comm_update_GN3.c  comm_update_TENSOR2D.c  comm_update_VECT.c  comm_update_VECT2D.c  comm_update_VECT2D_2.c  comm_update_con.c  comm_update_double.c  comm_update_double_surf.c  comm_update_edges.c  comm_update_gw.c  comm_update_int.c  comm_update_int_surf.c  comm_update_ns3.c  comm_update_sed.c  comm_update_snode.c  comm_update_sw2.c  comm_update_sw3.c  comm_update_sw3_new.c  comm_update_sw3_surface.c  comm_update_swave.c
src/debug/: tl_debug.c  tl_debug_alloc.c  tl_debug_free.c  tl_debug_init.c  tl_debug_realloc.c
src/elem/: CMakeLists.txt  edge_hash_add_entry.c  edge_hash_index.c  edge_hash_lookup.c  elem1d_find_elem2d.c  elem1d_find_elem2d_init.c  elem1d_hash_add_entry.c  elem1d_hash_lookup.c  elem1d_merge.c  elem1d_new.c  elem1d_outward_nrml.c  elem1d_pack_icnt.c  elem1d_packd.c  elem1d_packi.c  elem1d_renumber.c  elem1d_split.c  elem1d_unpacki.c  elem2d_hash_add_entry.c  elem2d_hash_lookup.c  elem2d_merge.c  elem2d_new.c  elem2d_normal.c  elem2d_pack_icnt.c  elem2d_packd.c  elem2d_packi.c  elem2d_renumber.c  elem2d_split.c  elem2d_unpacki.c  elem3d_hash_add_entry.c  elem3d_hash_lookup.c  elem3d_merge.c  elem3d_new.c  elem3d_pack_icnt.c  elem3d_packd.c  elem3d_packi.c  elem3d_renumber.c  elem3d_split.c  elem3d_unpacki.c  elem_hash_add_entry.c  elem_hash_index.c  (+2 more)
src/fe/: CMakeLists.txt  fe_assemble_matrix.c  fe_assign_elem_mat_db.c  fe_elem1d_integrations.c  fe_elem2d_integrations.c  fe_elem3d_integrations.c  fe_elem_utilities.c  fe_flux_couple.c  fe_get_supg_tau.c  fe_integrations.c  fe_main.c  fe_newton.c  fe_petsc_matrix_tools.c  fe_prototypes.h  fe_sw2_wet_dry_wrapper.c
src/fe_new/: allocate_pestc_matrix.c  fe_build_supermodel_system.c  fe_main.c  fe_newton.c  fe_newton_tools.c  fe_supermodel_init.c  matrix_utilities.c  petsc_utilities.c  update_elem_physics.c
src/file_io/: CMakeLists.txt  CMake_Srcs_main.cmake  Make_all  Maketest  file_io.c  manual_build  test.c  test2.c
src/friction/: CMakeLists.txt  CMakeLists.txt.org  fr_bedshstr_drag_coef.c  fr_rheight_to_manningsn.c  fr_sav_drag_coef.c  fr_stationary_ice_coef.c  fr_urv_drag_coef.c
src/grid/: CMakeLists.txt  adpt_fix_adj.c  adpt_fix_global_ids.c  adpt_fix_parents.c  adpt_get_node.c  adpt_main.c  adpt_merge_elem.c  adpt_rank_edges.c  adpt_ref.c  adpt_set_flags.c  adpt_set_node_number.c  adpt_unref.c  error_main.c  findBoundaryFaces.c  findrank.c  partition_adpt.c  partition_cleanup.c  partition_form.c  partition_form_all.c  partition_init.c  partition_main.c  partition_transfer.c
src/hydro_structures/: CMakeLists.txt  flap_compound_flux.c  flap_flow.c  sluice_compound_flux.c  sluice_flow.c  weir_compound_flux.c  weir_flow.c
src/include/: adh_hdf5.h  adh_version.h  cards.h  constants.h  define.h  fnctn.h  friction_ext.h  global_header.h  macro.h  type.h
src/initio/: CMakeLists.txt  get_bed_layer.c  get_material_id.c  get_node_id.c  get_string_id.c  get_transport_id.c  io_main.c  merge.txt  open_run_files.c  parse_card.c  print_build_info.c  print_grid_to_file.c  print_header.c  print_parents_to_file.c  print_runtime_info.c  print_sw3_to_file.c  print_trailer.c  print_xms_trailers.c  ps_print_geo_xdmf.c  ps_print_geo_xdmf.c.org  ps_print_geo_xdmf.c.original  ps_print_surf_geo_xdmf.c  ps_print_surf_ts_xdmf.c  ps_print_ts_xdmf.c  ps_print_xdmf.c  read_bc.c  read_bc_AWRITE.c  read_bc_CN.c  read_bc_DB.c  read_bc_DEBUG.c  read_bc_FILE_OUTPUT.c  read_bc_FR.c  read_bc_GW.c  read_bc_GW_MP.c  read_bc_IP.c  read_bc_MP.c  read_bc_NB.c  read_bc_NOTERM.c  read_bc_NSM.c  read_bc_OFF.c  (+28 more)
src/main/: CMakeLists.txt  adh.c  adh_cpl_func.c  adh_func.c  petsc_test.c
src/mesh/: CMakeLists.txt  mesh_pack_elem1d.c  mesh_pack_elem2d.c  mesh_pack_elem3d.c  mesh_pack_node.c  mesh_unpack_elem1d.c  mesh_unpack_elem2d.c  mesh_unpack_elem3d.c  mesh_unpack_node.c
src/messg/: CMakeLists.txt  messg_all_gather.c  messg_alloc.c  messg_arecv.c  messg_asend.c  messg_barrier.c  messg_buffer_alloc.c  messg_buffer_free.c  messg_buffer_init.c  messg_comm_rank.c  messg_comm_size.c  messg_dmax.c  messg_dmin.c  messg_dsum.c  messg_err.c  messg_gather_dbl.c  messg_gather_int.c  messg_imax.c  messg_imin.c  messg_incoming.c  messg_isum.c  messg_max_norm_loc.c  messg_pack.c  messg_pack_alloc.c  messg_precv.c  messg_unpack.c  messg_wait.c
src/meteor/: CMakeLists.txt  meteor_update.c  meteor_update_series.c  station_node_contrib.c  winds_proc_teeter.c  winds_proc_wu.c
src/node/: CMakeLists.txt  node2element_map.c  node_avg.c  node_cmp.c  node_get_local.c  node_get_surface_local.c  node_hash_add_entry.c  node_hash_index.c  node_hash_lookup.c  node_new.c  node_new_bed.c  node_new_surface.c  node_order.c  node_pack_dcnt.c  node_pack_dcnt_bed.c  node_pack_dcnt_surface.c  node_pack_icnt.c  node_packd.c  node_packd_bed.c  node_packd_surface.c  node_packi.c  node_renumber.c  node_renumber_double.c  node_renumber_gn.c  node_renumber_int.c  node_renumber_snode.c  node_renumber_surface.c  node_renumber_tensor2d.c  node_renumber_vect.c  node_renumber_vect2d.c  node_unpackd.c  node_unpackd_bed.c  node_unpackd_surface.c  node_unpacki.c
src/pt/: Makefile  adh_hdf5.h  elementSearch.c  elementSearch_bk.copy  geometry_tests.c  global_header.h  interpolate.c  main.c  ps_print_geo_xdmf.c  ps_print_ts_xdmf.c  ps_print_xdmf.c  (+31 more)
(+1327 files in other folders)
